src/assets/css/kb-glightbox.scss
/* ... */
  
  .ginlined-content {
	overflow: auto;
	display: block !important;
	opacity: 1;
  }
  
  .gslide-external {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	width: 100%;
	min-width: 100%;
	background: #fff;
	padding: 0;
	overflow: auto;
	max-height: 75vh;
	height: 100%;
  }
  
  .gslide-media {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	width: auto;
  }
  
  .zoomed .gslide-media {
	-webkit-box-shadow: none !important;
	box-shadow: none !important;
  }
  
  .desc-top .gslide-media,
	  .desc-bottom .gslide-media {
	margin: 0 auto;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
  }
  
  .gslide-description {
	position: relative;
	-webkit-box-flex: 1;
	-ms-flex: 1 0 100%;
	flex: 1 0 100%;
  }
  
  .gslide-description.description-left,
	  .gslide-description.description-right {
	max-width: 100%;
  }
  
  .gslide-description.description-bottom,
	  .gslide-description.description-top {
	margin: 0 auto;
	width: 100%;
  }
  
  .gslide-description p {
	margin-bottom: 12px;
  }
  
  .gslide-description p:last-child {
	margin-bottom: 0;
  }
  
  .zoomed .gslide-description {
	display: none;
  }
  
  
  
  /*
   * Description for mobiles
   * something like facebook does the description
   * for the photos
  */
  
  .glightbox-mobile .glightbox-container .gslide-description {
	height: auto !important;
	width: 100%;
	position: absolute;
	bottom: 0;
	padding: 19px 11px;
	max-width: 100vw !important;
	-webkit-box-ordinal-group: 3 !important;
	-ms-flex-order: 2 !important;
	order: 2 !important;
	max-height: 78vh;
	overflow: auto !important;
	background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0)), to(rgba(0, 0, 0, 0.75)));
	background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.75) 100%);
	-webkit-transition: opacity 0.3s linear;
	transition: opacity 0.3s linear;
	padding-bottom: 50px;
  }
  
  .glightbox-mobile .glightbox-container .gslide-title {
	color: #fff;
	font-size: 1em;
  }
  
  .glightbox-mobile .glightbox-container .gslide-desc {
	color: #a1a1a1;
  }
  
  .glightbox-mobile .glightbox-container .gslide-desc a {
	color: #fff;
	font-weight: bold;
  }
  
  .glightbox-mobile .glightbox-container .gslide-desc * {
	color: inherit;
  }
  
  .glightbox-mobile .glightbox-container .gslide-desc .desc-more {
	color: #fff;
	opacity: 0.4;
  }
  
  .gdesc-open .gslide-media {
	-webkit-transition: opacity 0.5s ease;
	transition: opacity 0.5s ease;
	opacity: 0.4;
  }
  
  .gdesc-open .gdesc-inner {
	padding-bottom: 30px;
  }
  
  .gdesc-closed .gslide-media {
	-webkit-transition: opacity 0.5s ease;
	transition: opacity 0.5s ease;
	opacity: 1;
  }
  
  .greset {
	-webkit-transition: all 0.3s ease;
	transition: all 0.3s ease;
  }
  
  .gabsolute {
	position: absolute;
  }
  
  .grelative {
	position: relative;
  }
  
  .glightbox-desc {
	display: none !important;
  }
  
  .glightbox-open {
	overflow: hidden;
  }
  
  .gloader {
	height: 25px;
	width: 25px;
	-webkit-animation: lightboxLoader 0.8s infinite linear;
	animation: lightboxLoader 0.8s infinite linear;
	border: 2px solid #fff;
	border-right-color: transparent;
	border-radius: 50%;
	position: absolute;
	display: block;
	z-index: 9999;
	left: 0;
	right: 0;
	margin: 0 auto;
	top: 47%;
  }
  
  .goverlay {
	width: 100%;
	height: calc(100vh + 1px);
	position: fixed;
	top: -1px;
	left: 0;
	background: var( --glightbox-main-color );
	will-change: opacity;
  }
  
  .glightbox-mobile .goverlay {
	background: var( --glightbox-main-color );
  }
  
  .gprev,
  .gnext,
  .gclose {
	z-index: 99999;
	cursor: pointer;
	width: 26px;
	height: 44px;
	border: none;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	justify-content: center;
	-webkit-box-align: center;
	-ms-flex-align: center;
	align-items: center;
	-webkit-box-orient: vertical;
	-webkit-box-direction: normal;
	-ms-flex-direction: column;
	flex-direction: column;
	box-shadow: none;
  }
  
  .gprev svg,
  .gnext svg,
  .gclose svg {
	display: block;
	width: 25px;
	height: auto;
	margin: 0;
	padding: 0;
  }
  
  .gprev.disabled,
  .gnext.disabled,
  .gclose.disabled {
	opacity: 0.1;
  }
  
  .gprev .garrow,
  .gnext .garrow,
  .gclose .garrow {
	stroke: #fff;
  }
  
  .gbtn.focused {
	outline: 2px solid #0f3d81;
  }
  
  iframe.wait-autoplay {
	opacity: 0;
  }
  
  .glightbox-closing .gnext,
	  .glightbox-closing .gprev,
	  .glightbox-closing .gclose {
	opacity: 0 !important;
  }
  .glightbox-button-hidden:not(.specificity) {
	display: none;
  }
  
  /*Skin Defaut */
  /* color Skins */
  .glightbox-kadence-dark {
	  --glightbox-main-color: #000;
	  --glightbox-main-overlay: rgba(0, 0, 0, 0.75);
	  --glightbox-nav-color: #fff;
	  --glightbox-nav-bg-color: rgba(0, 0, 0, 0.75);
	  --glightbox-nav-bg-hover-color: rgba(0, 0, 0, 0.85);
	  --glightbox-text-color: #fff;
	  --glightbox-image-shadow: 1px 2px 9px 0px rgba(0, 0, 0, 0.65);
  }
  .glightbox-kadence-light {
	  --glightbox-main-color: #fff;
	  --glightbox-main-overlay: rgba(255, 255, 255, 0.90);
	  --glightbox-nav-color: #000;
	  --glightbox-nav-bg-color: rgba(255, 255, 255, 0.75);
	  --glightbox-nav-bg-hover-color: rgba(255, 255, 255, 0.85);
	  --glightbox-text-color: #000;
	  --glightbox-image-shadow: 1px 2px 9px 0px rgba(0, 0, 0, 0.15);
  }
  .glightbox-container .gslide-description {
	background: transparent;
  }
  .glightbox-container .gdesc-inner {
	padding: 22px 20px;
  }
  .glightbox-container .gdesc-inner > *:first-child {
	  margin-top: 0;
  }
  .glightbox-container .gdesc-inner > * {
	  margin-bottom: 0.8em;
  }
  .glightbox-container .gdesc-inner > *:last-child {
	  margin-bottom: 0;
  }
  .glightbox-container .gslide-title {
	font-size: 1em;
	font-weight: normal;
	color: var( --glightbox-text-color );
	display: none;
  }
/* ... */

